# parallel

./: .gitignore  AGENTS.md  BUILDING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.agents/plugins/: marketplace.json
.github/workflows/: build-desktop-dmg.yml
.project-workflow/: decisions.md  manifest.yaml  plan.yaml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.auto-refresh.test.tsx  App.menubar.test.tsx  App.selection.test.ts  App.tsx  styles.css  styles.test.ts  tauri-target-dir.test.ts
apps/desktop/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  main.rs
apps/desktop/src/components/: CollapsibleSection.tsx  ContextRail.render.test.tsx  ContextRail.test.ts  ContextRail.tsx  FocusView.test.tsx  FocusView.tsx  ProjectSwitcher.test.tsx  ProjectSwitcher.tsx  SessionLedger.test.tsx  SessionLedger.tsx  SettingsModal.test.tsx  SettingsModal.tsx  ShaderBackdrop.test.ts  ShaderBackdrop.tsx
apps/desktop/src/lib/: activity.test.ts  activity.ts  api.ts  project-light.test.ts  project-light.ts  session-board.test.ts  session-board.ts  state.test.ts  state.ts  types.ts
crates/projectctl-rs/: Cargo.toml
crates/projectctl-rs/src/: agent_defaults.rs  lib.rs  main.rs  mcp.rs
crates/workflow-core-rs/: Cargo.toml
crates/workflow-core-rs/src/: decisions.rs  discovery.rs  handoff.rs  index_path.rs  index_store.rs  lib.rs  models.rs  read_model.rs  resolver.rs  root_paths.rs  services.rs  storage_yaml.rs
crates/workflow-core-rs/src/discovery/: claude_cache.rs
docs/: remote-mcp-oauth-track.md
docs/superpowers/plans/: 2026-04-16-parallel-session-board.md
docs/superpowers/specs/: 2026-04-16-parallel-session-board-design.md
plugins/parallel/.codex-plugin/: plugin.json
plugins/parallel/skills/parallel/: SKILL.md
scripts/: bridge-smoke.mjs  bridge-smoke.test.mjs
skills/parallel/: SKILL.md
