[package]
name = "parallel-projectctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "projectctl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.1", features = ["json"] }
parallel-workflow-core = { path = "../workflow-core-rs" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = "0.8.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23.0"
