[package]
name = "parallel-workflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
fd-lock = "4.0.4"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
