[package]
name = "parallel-desktop"
version = "0.1.0"
description = "Project Workflow OS desktop shell"
authors = ["light"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
notify = "6.1.1"
parallel-workflow-core = { path = "../../../crates/workflow-core-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = ["tray-icon"] }
