[package]
name = "parallel-desktop"
version = "0.1.0"
description = "Project Workflow OS desktop shell"
authors = ["light"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
base64 = "0.22.1"
notify = "6.1.1"
parallel-workflow-core = { path = "../../../crates/workflow-core-rs" }
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
